# FastElectrodeSegmentor

./: CMakeLists.txt  README.md
FastElectrodeSegmentor/: CMakeLists.txt  FastElectrodeSegmentor.cxx  FastElectrodeSegmentor.xml
Interface/: CMakeLists.txt  Interface.py
Interface/Resources/UI/: Interface.ui
